--- a/MAUI.ClientProjectManagement/Views/ClientProjectView.xaml
+++ b/MAUI.ClientProjectManagement/Views/ClientProjectView.xaml
@@ -88,7 +88,7 @@
                         <ViewCell>
                             <Grid>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="2*"/>
                                     <ColumnDefinition Width="2*"/>
                                 </Grid.ColumnDefinitions>
                                 <Label Grid.Column="0" Text="{Binding Path=Display}"/>
